--- a/JiaoBaoYun-hb/html/homework/workdetail-tea-sub.html
+++ b/JiaoBaoYun-hb/html/homework/workdetail-tea-sub.html
@@ -341,7 +341,7 @@
 				var headImg = updateHeadImg(uploadArray[i].uimg,2)
 									var li = document.createElement('li');
 									li.workInfo = uploadArray[i];
-									li.homeworkInfo.workType = 1;
+									li.workInfo.workType = 1;
 									mui.extend(li.workInfo,homeworkDetailModel)
 									li.className = 'mui-table-view-cell mui-media isCommented'
 				li.innerHTML = '<img  class="mui-media-object mui-pull-left " src="'+headImg +'" />'+
