--- a/JiaoBaoYun-hb/html/homework/homework-commented.html
+++ b/JiaoBaoYun-hb/html/homework/homework-commented.html
@@ -22,23 +22,23 @@
 			<a id="modifyHomework" class="mui-pull-right">修改</a>
 		</header>
 		
-		<div class="mui-content mui-scroll-wrapper">
+		<div  class="mui-content mui-scroll-wrapper">
 			<div class="mui-scroll">
-				<ul class="mui-table-view">
+				<ul id="list" class="mui-table-view">
 					<li class="mui-table-view-cell mui-media ">
 						<img id="img" class="mui-media-object mui-pull-left" src="../../image/homework/math.png" />
 						<div class="mui-media-body">
-							<h6 id="homeworkTitle">数学作业</h6>
-						<p id="publishDate" class='mui-ellipsis'>发布时间：</p>
+							<h6 id="homeworkTitle"></h6>
+						<p id="publishDate" class='mui-ellipsis'></p>
 					</div>
 					<div class="mui-media-body">
-						<font id="homeWorkContent">1+1=3</font> 
+						<font id="homeWorkContent"></font> 
 					</div>
 				</li>
 				<li class="mui-table-view-divider">作业评语</li>
 									<li class="mui-table-view-cell  ">
 					<div class="mui-media-body" >
-						<font id="commentContent">你真是个天才！</font> 
+						<font id="commentContent"></font> 
 					</div>
 				</li>
 			</ul>
