修改老师评论界面样式

--- a/JiaoBaoYun-hb/html/homework/homework-comment.html
+++ b/JiaoBaoYun-hb/html/homework/homework-comment.html
@@ -23,7 +23,7 @@
 		    	<div class='student-info'>
 		    		<img id="stu-head" class='stuInfo-img'/>
 		    		<div class='stuInfo-words'>
-		    			<p id='stu-name'></p>
+		    			<h5 id='stu-name'></h5>
 		    			<p id='submit-time'></p>
 		    		</div>
 		    	</div>
