--- a/JiaoBaoYun-hb/html/cloud/storage_transport.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_transport.html
@@ -338,9 +338,9 @@
 					//	metadata: succesCB //文件信息
 					//  pid:pid//云盘文件夹父ID
 					//}
-					if(mui.os.android) { //android系统
-						subData.path = 'file://' + subData.path;
-					}
+					//if(mui.os.android) { //android系统
+						//subData.path = 'file://' + subData.path;
+					//}
 					console.log('传输列表新增一项上传任务:' + JSON.stringify(subData));
 
 					//获取上传和下载文件夹的目录对象
