--- a/JiaoBaoYun-hb/html/cloud/storage_main.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_main.html
@@ -174,7 +174,7 @@
 			//点击上传按钮
 			document.getElementById('upload').addEventListener('tap', function() {
 				console.log('上传' + JSON.stringify(topFolderData[0]));
-				events.fireToPageWithData('storage_upload.html', 'init', {
+				events.fireToPageWithData('storage_upload_choose.html', 'init', {
 					fid: '0', //文件id,顶层0
 					showTop: false, //是否显示顶部的上传，传输列表，文件夹，如果是选择云盘上的文件夹则为false
 					title: '我的教宝云盘', //标题名
