增加退出登录重新登录后上传下载的处理

--- a/JiaoBaoYun-hb/html/cloud/cloud_home.html
+++ b/JiaoBaoYun-hb/html/cloud/cloud_home.html
@@ -357,6 +357,7 @@
 					//设置页面信息
 					changeInfo();
 					changeData();
+					events.fireToPageNone('storage_upload.html', 'createFolder'); //在程序中创建utid的文件夹和对应的上传下载文件夹
 				});
 
 				//修改用户信息
