--- a/JiaoBaoYun-hb/html/cloud/storage_upload_choose.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_upload_choose.html
@@ -12,6 +12,7 @@
 		<script src="../../js/mui.min.js"></script>
 		<script type="text/javascript" src="../../js/utils/events.js"></script>
 		<script type="text/javascript" src="../../js/cloud/AndroidFileSystem.js"></script>
+		<script type="text/javascript" src="../../js/storageKeyName.js"></script>
 		<style type="text/css">
 			body,
 			.mui-content {
@@ -149,7 +150,7 @@
 						showTop: subData.showTop, //是否显示顶部的上传，传输列表，文件夹，如果是选择云盘上的文件夹则为false
 						title: subData.title, //标题名
 						top: subData.top, //顶层文件和文件夹的数据
-						type:'0'//选择文件的方式0，从本地文件1
+						type: '0' //选择文件的方式0，从本地文件1
 					});
 					//					} else {
 					//						plus.webview.getWebviewById('storage_main_choose.html').show('slide-in-right', 250);
@@ -159,8 +160,9 @@
 				//上传选择的文件
 				document.getElementById('upload').addEventListener('tap', function() {
 					if(upFile != null) {
-						console.log("upload:" + JSON.stringify(upFile));
+						//console.log("upload:" + JSON.stringify(upFile));
 						//跳转到传输列表
+						plus.nativeUI.showWaiting(storageKeyName.WAITING);
 						events.fireToPageWithData('storage_transport.html', 'addUpload', {
 							path: upFile.path, //路径
 							fname: upFile.fname, //文件名
