--- a/JiaoBaoYun-hb/html/mine/setting.html
+++ b/JiaoBaoYun-hb/html/mine/setting.html
@@ -90,6 +90,8 @@
 										if(data.RspCode == 0) {
 											//修改自动登录值
 											window.myStorage.setItem(window.storageKeyName.PERSONALINFO, null);
+											//清理上传下载的任务和界面
+											events.fireToPageNone('storage_transport.html','removeAllTask');
 											//跳转到登录界面
 											events.openNewWindowWithData('../../html/register/login.html', '');
 										} else {
