关闭关于选项

--- a/JiaoBaoYun-hb/html/index/mine.html
+++ b/JiaoBaoYun-hb/html/index/mine.html
@@ -147,7 +147,7 @@
 							break;
 							//关于
 						case 7:
-							events.openNewWindow('/html/mine/group-info.html')
+//							events.openNewWindow('/html/mine/group-info.html')
 							break;
 
 						default:
