--- a/JiaoBaoYun-hb/html/quan/studentdynamic_sub.html
+++ b/JiaoBaoYun-hb/html/quan/studentdynamic_sub.html
@@ -278,7 +278,7 @@
 							createNotes(item);
 						});
 						if(data.RspData.Data.length == 0) {
-							mui.toast('获取数据为空');
+							mui.toast('无更多动态');
 						}
 						//mui('.mui-scroll-wrapper').scroll().scrollToBottom(100); //滚动到底部-----有BUG
 					} else {
