添加云盘图标

--- a/JiaoBaoYun-hb/html/cloud/storage_upload_choose.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_upload_choose.html
@@ -73,7 +73,8 @@
 							</div>
 						</li>
 						<li class="mui-table-view-cell mui-media" value="2">
-							<img class="mui-media-object mui-pull-left" src="../../image/cloud/A_folder.png">
+							<!--<img class="mui-media-object mui-pull-left" src="../../image/cloud/A_folder.png">-->
+							<span class="mui-media-object mui-icon iconfont icon-allfolder mui-pull-left" style="color: #FFD33C;"></span>
 							<div class="mui-media-body">
 								从本地文件
 							</div>
