与我相关增加作业提醒

--- a/JiaoBaoYun-hb/html/homework/homework-tea-sub.html
+++ b/JiaoBaoYun-hb/html/homework/homework-tea-sub.html
@@ -43,7 +43,7 @@
 		  </div>
 	<!--</div>-->
 		<!--发布作业按钮-->
-		<a id="iconPublish" class="mui-icon iconfont icon-jia" ></a>
+		<a id="iconPublish" class="mui-icon iconfont icon-tianjia" ></a>
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/utils/events.js"></script>
 		<script src="../../js/publicProtocol.js" type="text/javascript" charset="utf-8"></script>
